Applying the solution for fist problem